# unsum

./: .Rbuildignore  .gitignore  404.html  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  closure.Rproj  configure  configure.win  cran-comments.md  index.html  pkgdown.yml  search.json  sitemap.xml
.claude/: settings.local.json
R/: classes.R  combine.R  compare-sprite-closure.R  constants.R  count.R  demo-plot.R  doc-helpers.R  doc-sections.R  extendr-wrappers.R  fn-factory.R  fn-formals.R  generate-basic.R  generate-for-export.R  generate.R  horns-analyze.R  horns-corrected.R  horns-plot-for-export.R  horns-plot.R  horns.R  horns_discrete_implementation.R  performance.R  pivot.R  plot-bar-basic.R  plot-bar-for-export.R  plot-bar.R  plot-basic.R  plot-ecdf-basic.R  plot-horns-histogram-basic.R  plot.R  read-write-basic.R  read-write.R  read.R  s7-result.R  sprite-generate.R  standalone-last-export.R  summaries.R  sysdata.rda  utils.R  write.R  zzz.R
articles/: index.html  install-rust.html  unsum.html
data-raw/: closure-data.R
man/: closure_combine.Rd  closure_count.Rd  closure_count_all.Rd  closure_count_combinations_initial.Rd  closure_count_initial.Rd  closure_gauge_complexity.Rd  closure_generate.Rd  closure_horns_analyze.Rd  closure_pivot_longer.Rd  closure_plot.Rd  closure_plot_bar.Rd  closure_plot_ecdf.Rd  closure_summarize.Rd  closure_write.Rd  create_combinations.Rd  (+8 more)
src/rust/: Cargo.toml  vendor-config.toml  vendor.tar.xz
src/rust/src/: lib.rs
(+54 files in other folders)
