[package]
name = 'unsum'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'unsum'

[dependencies]
extendr-api = '0.8.0'
closure-core = { git = "https://github.com/lhdjung/closure-core.git", branch = "optimize" }

[profile.release]
lto = "fat"
