[package]
name = 'unsum'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'unsum'

[dependencies]
closure-core = { git = "https://github.com/lhdjung/closure-core.git", branch = "optimize" }
extendr-api = '*'

[profile.release]
lto = "fat"
